--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+      <a class="navbar-brand logo" href="index.html"><img src="img/logoresized.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -48,13 +48,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/mountains.png" class="d-block w-100" alt="...">
+        <img src="img/NY1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/red.png" class="d-block w-100" alt="...">
+        <img src="img/NY2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/snow.png" class="d-block w-100" alt="...">
+        <img src="img/Seattle.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -70,5 +70,42 @@
 
 
 </body>
+
+<footer>
+	<div class="container-fluid padding">
+	<div class="row text-car">
+		<div class="col-md-4" style="text-align:center">
+			<img class="center" src="img/logoresized.png" width="100px">
+      <hr class="light">
+			<p>(382) 982-9843</p>
+			<p>coding1student@gmail.com</p>
+			<p>100 Street Name</p>
+			<p>City, State, 00000</p>
+      <a href="https://shreypatel30.github.io/Coding-1-Final/">Website Link</a>
+		</div>
+		<div class="col-md-4" style="text-align:center">
+			<hr class="light">
+			<h5 style="text-align:center">Our Hours</h5>
+			<hr class="light">
+			<p>Monday-Saturday: 24-Hour Customer Service</p>
+			<p>Sunday: Customer Service closed</p>
+		</div>
+		<div class="col-md-4" style="text-align:center">
+			<hr class="light">
+			<h5 style="text-align:center">Service Areas</h5>
+			<hr class="light">
+			<p>North America</p>
+			<p>South America</p>
+			<p>Europe</p>
+			<p>Asia</p>
+			<p>Australia</p>
+		</div>
+		<div class="col-12">
+			<hr class="light">
+			<h5 style="text-align:center">&copy; cities.com</h5>
+		</div>
+	</div>
+	</div>
+</footer>
 
 </html>
