--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="img/logoresized.png"></a>
+      <a class="navbar-brand logo" href="index.html"><img class="logo" src="img/logo.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -75,7 +75,7 @@
 	<div class="container-fluid padding">
 	<div class="row text-car">
 		<div class="col-md-4" style="text-align:center">
-			<img class="center" src="img/logoresized.png" width="100px">
+			<img class="center logo" src="img/logo.png" width="100px">
       <hr class="light">
 			<p>(382) 982-9843</p>
 			<p>coding1student@gmail.com</p>
